# cmeel

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  cmeel.pth  cmeel.py  cmeel_pth.py  cmw.py  default.nix  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  editable.yml  helpers.yml  lint.yml  nix.yml  release.yml  sdist.yml  test.yml  update-flake-lock.yml
cmeel/: __init__.py  __main__.py  backports.py  build.py  cmeel.py  config.py  consts.py  docker.py  env.py  helpers.py  impl.py  metadata.py  pth.py  release.py  run.py  sdist.py  utils.py
docs/: conf.py  index.rst  internal.rst  main.md  module.md  packaging-guide.md  release.md  release.sh  requirements.txt  user-guide.md
