[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
classifiers = [
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Software Distribution"
]
description = "Create Wheel from CMake projects"
documentation = "https://cmeel.readthedocs.io/"
homepage = "https://github.com/cmake-wheel/cmeel"
include = ['cmeel.pth']
license = "BSD-2-Clause"
name = "cmeel"
readme = "README.md"
version = "0.39.0"

[tool.poetry.dependencies]
cmake = {optional = true, version = "^3.22.3"}
importlib-metadata = {python = "<3.8", version = "^6.0.0"}
packaging = {optional = true, version = "^23.0"}
python = "^3.7"
tomli = "^2.0.1"
wheel = {optional = true, version = ">=0.38.4,<0.41.0"}

[tool.poetry.extras]
build = ["cmake", "packaging", "wheel"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = {python = "^3.8", version = "^5.12.0"}
mypy = "^1.1.1"
myst-parser = ">=0.18.1,<1.1.0"
ruff = ">=0.0.254,<0.0.261"
safety = {allow-prereleases = true, version = "^2.4.0b1"}
sphinx = "^5.3.0"

[tool.poetry.urls]
changelog = "https://github.com/cmake-wheel/cmeel/blob/main/CHANGELOG.md"

[tool.ruff]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "D", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py37"

[tool.tomlsort]
all = true
