[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "build>=1.2.2.post1",
  "furo>=2024.8.6",
  "hatch>=1.14.0",
  "mypy>=1.14.0",
  "myst-parser>=4.0.0 ; python_full_version >= '3.10'",
  "requests>=2.32.3",
  "ruff>=0.8.4",
  "sphinx>=7.1.2 ; python_full_version >= '3.10'",
]

[project]
authors = [
  {email = "guilhem.saurel@laas.fr", name = "Guilhem Saurel"},
]
classifiers = [
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Software Distribution",
]
dependencies = [
  "tomli>=2.1.0 ; python_full_version < '3.11'",
]
description = "Create Wheel from CMake projects"
license = "BSD-2-Clause"
name = "cmeel"
readme = "README.md"
requires-python = ">=3.8"
version = "0.56.0"

[project.optional-dependencies]
build = [
  "cmake>=3.31.2",
  "git-archive-all",
  "packaging>=24.2",
  "wheel>=0.45.1",
]

[project.scripts]
cmeel = "cmeel.__main__:main"

[project.urls]
Changelog = "https://github.com/cmake-wheel/cmeel/blob/main/CHANGELOG.md"
Documentation = "https://cmeel.readthedocs.io/"
Homepage = "https://github.com/cmake-wheel/cmeel"

[tool.hatch.build.targets.sdist]
include = ["cmeel", "cmeel.pth", "cmeel_pth.py"]

[tool.hatch.build.targets.wheel]
include = ["cmeel", "cmeel.pth", "cmeel_pth.py"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-ignore = ["COM812", "D203", "D213"]
extend-select = ["A", "B", "C", "COM", "D", "EM", "EXE", "G", "I", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
trailing_comma_inline_array = true

[tool.uv.sources]
git-archive-all = {git = "https://github.com/nim65s/git-archive-all"}
